--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -57,7 +57,7 @@
             <br>
 
             <div>
-                <a href="{% url 'signup' %}" class="btn btn-success btn-block btn-flat">Regístrate</a>
+                <a href="{% url 'registerbuttonpage' %}" class="btn btn-success btn-block btn-flat">Regístrate</a>
             </div>
 
         </div>
