--- a/templates/registrarMunicipal.html
+++ b/templates/registrarMunicipal.html
@@ -115,7 +115,7 @@
                         <div class="row">
                             <div class="col-xs-3"></div>
                             <div class="col-xs-8">
-                                <h1>Regístrar Municipalidad</h1>
+                                <h1>Registrar Municipalidad</h1>
                             </div>
 
                         </div>
