--- a/templates/muni-lista-denuncias.html
+++ b/templates/muni-lista-denuncias.html
@@ -114,138 +114,31 @@
             <!-- Content Header (Page header) -->
             <section class="content-header">
                 <h1>
-                    ONG
+                    Denuncias
                 </h1>
             </section>
             <!-- Main content -->
             <section class="content container-fluid">
-                <div class="row">
-                    <div class="col-lg-4 col-sm-6">
-                        <!-- Widget: user widget style 1 -->
-                        <div class="box box-widget widget-user">
-                            <!-- Add the bg color to the header using any of the bg-* classes -->
-                            <!-- <div class="widget-user-header bg-black" style="background: url('dist/img/photo1.png') center center;"> -->
-                            <div class="widget-user-header bg-purple-active">
-                                <h3 class="widget-user-username">Fundación EDRA</h3>
-                                <h5 class="widget-user-desc">
-                                    <i class="fa fa-star c-star"></i>
-                                    182
-                                </h5>
-                            </div>
-                            <div class="widget-user-image">
-                                <img class="img-circle" src="dist/img/ong-edra.png" alt="User Avatar">
-                            </div>
-                            <div class="c-box__footer">
-                                <a href="muni-estadisticas-ongs-ong.html" type="button" class="btn btn-primary">
-                                    <i class="fa fa-bar-chart"></i>
-                                    Ver Estadísticas
-                                </a>
-                            </div>
-                        </div>
-                        <!-- /.widget-user -->
-                    </div>
-                    <!-- /.col -->
-                    <div class="col-lg-4 col-sm-6">
-                        <!-- Widget: user widget style 1 -->
-                        <div class="box box-widget widget-user">
-                            <!-- Add the bg color to the header using any of the bg-* classes -->
-                            <!-- <div class="widget-user-header bg-black" style="background: url('dist/img/photo1.png') center center;"> -->
-                            <div class="widget-user-header bg-purple-active">
-                                <h3 class="widget-user-username">Fundación EDRA</h3>
-                                <h5 class="widget-user-desc">
-                                    <i class="fa fa-star c-star"></i>
-                                    182
-                                </h5>
-                            </div>
-                            <div class="widget-user-image">
-                                <img class="img-circle" src="dist/img/ong-edra.png" alt="User Avatar">
-                            </div>
-                            <div class="c-box__footer">
-                                <a href="muni-estadisticas-ongs-ong.html" type="button" class="btn btn-primary">
-                                    <i class="fa fa-bar-chart"></i>
-                                    Ver Estadísticas
-                                </a>
-                            </div>
-                        </div>
-                        <!-- /.widget-user -->
-                    </div>
-                    <!-- /.col -->
-                    <div class="col-lg-4 col-sm-6">
-                        <!-- Widget: user widget style 1 -->
-                        <div class="box box-widget widget-user">
-                            <!-- Add the bg color to the header using any of the bg-* classes -->
-                            <!-- <div class="widget-user-header bg-black" style="background: url('dist/img/photo1.png') center center;"> -->
-                            <div class="widget-user-header bg-purple-active">
-                                <h3 class="widget-user-username">Fundación EDRA</h3>
-                                <h5 class="widget-user-desc">
-                                    <i class="fa fa-star c-star"></i>
-                                    182
-                                </h5>
-                            </div>
-                            <div class="widget-user-image">
-                                <img class="img-circle" src="dist/img/ong-edra.png" alt="User Avatar">
-                            </div>
-                            <div class="c-box__footer">
-                                <a href="muni-estadisticas-ongs-ong.html" type="button" class="btn btn-primary">
-                                    <i class="fa fa-bar-chart"></i>
-                                    Ver Estadísticas
-                                </a>
-                            </div>
-                        </div>
-                        <!-- /.widget-user -->
-                    </div>
-                    <!-- /.col -->
-                    <div class="col-lg-4 col-sm-6">
-                        <!-- Widget: user widget style 1 -->
-                        <div class="box box-widget widget-user">
-                            <!-- Add the bg color to the header using any of the bg-* classes -->
-                            <div class="widget-user-header bg-purple-active">
-                                <h3 class="widget-user-username">Fundación EDRA</h3>
-                                <h5 class="widget-user-desc">
-                                    <i class="fa fa-star c-star"></i>
-                                    182
-                                </h5>
-                            </div>
-                            <div class="widget-user-image">
-                                <img class="img-circle" src="dist/img/ong-edra.png" alt="User Avatar">
-                            </div>
-                            <div class="c-box__footer">
-                                <a href="muni-estadisticas-ongs-ong.html" type="button" class="btn btn-primary">
-                                    <i class="fa fa-bar-chart"></i>
-                                    Ver Estadísticas
-                                </a>
-                            </div>
-                        </div>
-                        <!-- /.widget-user -->
-                    </div>
-                    <!-- /.col -->
-                    <div class="col-lg-4 col-sm-6">
-                        <!-- Widget: user widget style 1 -->
-                        <div class="box box-widget widget-user">
-                            <!-- Add the bg color to the header using any of the bg-* classes -->
-                            <div class="widget-user-header bg-purple-active">
-                                <h3 class="widget-user-username">Fundación EDRA</h3>
-                                <h5 class="widget-user-desc">
-                                    <i class="fa fa-star c-star"></i>
-                                    182
-                                </h5>
-                            </div>
-                            <div class="widget-user-image">
-                                <img class="img-circle" src="dist/img/ong-edra.png" alt="User Avatar">
-                            </div>
-                            <div class="c-box__footer">
-                                <a href="muni-estadisticas-ongs-ong.html" type="button" class="btn btn-primary">
-                                    <i class="fa fa-bar-chart"></i>
-                                    Ver Estadísticas
-                                </a>
-                            </div>
-                        </div>
-                        <!-- /.widget-user -->
-                    </div>
-                    <!-- /.col -->
+                <div class="table-responsive">
+                    <table class="table table-hover"style = "background-color: white">
+                        <thead>
+                            <tr>
+                                {% for value in set_header %}
+                                    <th>{{ value }}</th>
+                                {% endfor %}
+                            </tr>
+                        </thead>
+                        <tbody>
+                        {% for denuncia in set_denuncia %}
+                            <tr>
+                                {% for field,value in denuncia.items %}
+                                    <td>{{ value }}</td>
+                                {% endfor %}
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
                 </div>
-                <!-- /.row -->
-
             </section>
             <!-- /.content -->
         </div>
