--- a/templates/vista-denuncia-muni.html
+++ b/templates/vista-denuncia-muni.html
@@ -120,7 +120,7 @@
             <!-- Main content -->
             <section class="content container-fluid">
                 <div class="table-responsive">
-                    <table class="table table-condensed">
+                    <table class="table table-condensed" style = "background-color: white">
                         <tr>
                             <th>Tipo de Denuncia:</th>
                             {% if denuncia.maltrato == "AB" %}
