--- a/templates/vista-denuncia-muni.html
+++ b/templates/vista-denuncia-muni.html
@@ -124,78 +124,78 @@
                         <tr>
                             <th>Tipo de Denuncia:</th>
                             {% if denuncia.maltrato == "AB" %}
-                            <th>Abandono en la calle</th>
+                                <td>Abandono en la calle</td>
                             {% endif %}
                             {% if denuncia.maltrato == "EX" %}
-                            <th>Exposición a altas temperaturas</th>
+                                <td>Exposición a altas temperaturas</td>
                             {% endif %}
                             {% if denuncia.maltrato == "FA" %}
-                            <th>Falta de agua</th>
+                                <td>Falta de agua</td>
                             {% endif %}
                             {% if denuncia.maltrato == "FC" %}
-                            <th>Falta de comida</th>
+                                <td>Falta de comida</td>
                             {% endif %}
                             {% if denuncia.maltrato == "VI" %}
-                            <th>Violencia</th>
+                                <td>Violencia</td>
                             {% endif %}
                             {% if denuncia.maltrato == "VA" %}
-                            <th>Venta ambulante</th>
+                                <td>Venta ambulante</td>
                             {% endif %}
                             <th>Tipo de Animal:</th>
                             {% if denuncia.tipo ==  "P"%}
-                                <th>Perro</th>
+                                <td>Perro</td>
                             {% endif %}
 
                             {% if denuncia.tipo ==  "G"%}
-                                <th>Gato</th>
+                                <td>Gato</td>
                             {% endif %}
                             <th>Color:</th>
-                            <th>{{ denuncia.color}}</th>
+                            <td>{{ denuncia.color}}</td>
                         </tr>
                         <tr>
-                            <th>Dirección</th>
-                            <th>{{ denuncia.calle }}</th>
-                            <th>Sexo</th>
+                            <th>Dirección:</th>
+                            <td>{{ denuncia.calle }}</td>
+                            <th>Sexo:</th>
 
                             {% if denuncia.sexo == "M" %}
-                                <th>Macho</th>
+                                <td>Macho</td>
                             {% endif %}
                             {% if denuncia.sexo == "H" %}
-                                <th>Hembra</th>
+                                <td>Hembra</td>
                             {% endif %}
                             {% if denuncia.sexo == "D" %}
-                                <th>Desconocido</th>
+                                <td>Desconocido</td>
                             {% endif %}
                             <th>¿Herido?</th>
                             {% if denuncia.herido == "S" %}
-                                <th>Sí</th>
+                                <td>Sí</td>
                             {% endif %}
                             {% if denuncia.herido == "N" %}
-                                <th>No</th>
+                                <td>No</td>
                             {% endif %}
                             {% if denuncia.herido == "D" %}
-                                <th>Desconocido</th>
+                                <td>Desconocido</td>
                             {% endif %}
                         </tr>
                         <tr>
                             <th>Estado:</th>
                             {% if denuncia.estado == "RE" %}
-                                <th>Reportada</th>
+                                <td>Reportada</td>
                             {% endif %}
                             {% if denuncia.estado == "CO" %}
-                                <th>Consolidada</th>
+                                <td>Consolidada</td>
                             {% endif %}
                             {% if denuncia.estado == "VE" %}
-                                <th>Verificada</th>
+                                <td>Verificada</td>
                             {% endif %}
                             {% if denuncia.estado == "CE" %}
-                                <th>Cerrada</th>
+                                <td>Cerrada</td>
                             {% endif %}
                             {% if denuncia.estado == "DE" %}
-                                <th>Desechada</th>
+                                <td>Desechada</td>
                             {% endif %}
                             <th>Comentario:</th>
-                            <th>{{ denuncia.comentario }}</th>
+                            <td>{{ denuncia.comentario }}</td>
                         </tr>
                     </table>
                 </div>
