--- a/templates/muni-estadisticas-ongs.html
+++ b/templates/muni-estadisticas-ongs.html
@@ -29,16 +29,16 @@
                             <!-- Menu Toggle Button -->
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <!-- The user image in the navbar-->
-                                <img src="dist/img/muni-santiago-160x160.png" class="user-image" alt="User Image">
+                                <img src="{% static 'img/santiagologo.jpg' %}"class="user-image" alt="User Image">
                                 <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                                <span class="hidden-xs">M. de Santiago</span>
+                                <span class="hidden-xs">M. de {{ user.first_name }}</span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- The user image in the menu -->
                                 <li class="user-header">
                                     <!-- <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"> -->
-                                    <img src="dist/img/muni-santiago-160x160.png" class="img-circle" alt="User Image">
-                                    <p>Municipalidad de Santiago</p>
+                                    <img src="{% static 'img/santiagologo.jpg' %}" class="img-circle" alt="User Image">
+                                    <p>Municipalidad de {{ user.first_name }}</p>
                                 </li>
                                 <!-- Menu Footer-->
                                 <li class="user-footer">
@@ -64,11 +64,11 @@
                 <!-- Sidebar user panel (optional) -->
                 <div class="user-panel">
                     <div class="pull-left image">
-                        <img src="dist/img/muni-santiago-160x160.png" class="img-circle" alt="User Image">
+                        <img src="{% static 'img/santiagologo.jpg' %}" class="img-circle" alt="User Image">
                     </div>
                     <div class="pull-left info">
                         <!-- <br> -->
-                        <p>Municipalidad de<br>Santiago</p>
+                        <p>Municipalidad de<br>{{ user.first_name }}</p>
                     </div>
                 </div>
                 <!-- Sidebar Menu -->
@@ -126,14 +126,14 @@
                             <!-- Add the bg color to the header using any of the bg-* classes -->
                             <!-- <div class="widget-user-header bg-black" style="background: url('dist/img/photo1.png') center center;"> -->
                             <div class="widget-user-header bg-purple-active">
-                                <h3 class="widget-user-username">Fundación EDRA</h3>
+                                <h3 class="widget-user-username">Fundación Julieta</h3>
                                 <h5 class="widget-user-desc">
                                     <i class="fa fa-star c-star"></i>
-                                    182
+                                    240
                                 </h5>
                             </div>
                             <div class="widget-user-image">
-                                <img class="img-circle" src="dist/img/ong-edra.png" alt="User Avatar">
+                                <img class="img-circle" src="{% static 'img/fundacionjulieta.png' %}" alt="User Avatar">
                             </div>
                             <div class="c-box__footer">
                                 <a href="muni-estadisticas-ongs-ong.html" type="button" class="btn btn-primary">
@@ -151,14 +151,14 @@
                             <!-- Add the bg color to the header using any of the bg-* classes -->
                             <!-- <div class="widget-user-header bg-black" style="background: url('dist/img/photo1.png') center center;"> -->
                             <div class="widget-user-header bg-purple-active">
-                                <h3 class="widget-user-username">Fundación EDRA</h3>
+                                <h3 class="widget-user-username">Fundación Rescate Animal</h3>
                                 <h5 class="widget-user-desc">
                                     <i class="fa fa-star c-star"></i>
-                                    182
+                                    195
                                 </h5>
                             </div>
                             <div class="widget-user-image">
-                                <img class="img-circle" src="dist/img/ong-edra.png" alt="User Avatar">
+                                <img class="img-circle" src="{% static 'img/fundacionrescateanimal.png' %}" alt="User Avatar">
                             </div>
                             <div class="c-box__footer">
                                 <a href="muni-estadisticas-ongs-ong.html" type="button" class="btn btn-primary">
@@ -176,14 +176,14 @@
                             <!-- Add the bg color to the header using any of the bg-* classes -->
                             <!-- <div class="widget-user-header bg-black" style="background: url('dist/img/photo1.png') center center;"> -->
                             <div class="widget-user-header bg-purple-active">
-                                <h3 class="widget-user-username">Fundación EDRA</h3>
+                                <h3 class="widget-user-username">Fundación Altarriba</h3>
                                 <h5 class="widget-user-desc">
                                     <i class="fa fa-star c-star"></i>
                                     182
                                 </h5>
                             </div>
                             <div class="widget-user-image">
-                                <img class="img-circle" src="dist/img/ong-edra.png" alt="User Avatar">
+                                <img class="img-circle" src="{% static 'img/fundacionaltarriba.png' %}" alt="User Avatar">
                             </div>
                             <div class="c-box__footer">
                                 <a href="muni-estadisticas-ongs-ong.html" type="button" class="btn btn-primary">
@@ -200,14 +200,14 @@
                         <div class="box box-widget widget-user">
                             <!-- Add the bg color to the header using any of the bg-* classes -->
                             <div class="widget-user-header bg-purple-active">
-                                <h3 class="widget-user-username">Fundación EDRA</h3>
+                                <h3 class="widget-user-username">Fundación Animal Chile</h3>
                                 <h5 class="widget-user-desc">
                                     <i class="fa fa-star c-star"></i>
-                                    182
+                                    124
                                 </h5>
                             </div>
                             <div class="widget-user-image">
-                                <img class="img-circle" src="dist/img/ong-edra.png" alt="User Avatar">
+                                <img class="img-circle" src="{% static 'img/fundacionanimalchile.png' %}" alt="User Avatar">
                             </div>
                             <div class="c-box__footer">
                                 <a href="muni-estadisticas-ongs-ong.html" type="button" class="btn btn-primary">
@@ -224,14 +224,14 @@
                         <div class="box box-widget widget-user">
                             <!-- Add the bg color to the header using any of the bg-* classes -->
                             <div class="widget-user-header bg-purple-active">
-                                <h3 class="widget-user-username">Fundación EDRA</h3>
+                                <h3 class="widget-user-username">Fundación Stuka</h3>
                                 <h5 class="widget-user-desc">
                                     <i class="fa fa-star c-star"></i>
-                                    182
+                                    58
                                 </h5>
                             </div>
                             <div class="widget-user-image">
-                                <img class="img-circle" src="dist/img/ong-edra.png" alt="User Avatar">
+                                <img class="img-circle" src="{% static 'img/fundacionstuka.png' %}" alt="User Avatar">
                             </div>
                             <div class="c-box__footer">
                                 <a href="muni-estadisticas-ongs-ong.html" type="button" class="btn btn-primary">
@@ -358,7 +358,7 @@
                     <form>
                         <div class="form-group">
                             <label for="exampleInputEmail1">Nombre</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" value="Municipalidad de Santiago">
+                            <input type="email" class="form-control" id="exampleInputEmail1" value="Municipalidad de '{{ user.first_name }}'">
                         </div>
                         <div class="form-group">
                             <label for="exampleInputFile">Imagen de perfil</label>
